[gd_scene load_steps=4 format=3 uid="uid://d2fwlf8gf57ym"]

[ext_resource type="Script" path="res://ui/center_container.gd" id="1_1goru"]
[ext_resource type="FontFile" uid="uid://d0skg0e6m85wm" path="res://assets/UI_objects/PixelMechaBold.ttf" id="1_36fss"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aip00"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="CenterContainer" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1goru")

[node name="StartButton" type="Button" parent="."]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.662745, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.662745, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.662745, 0, 1)
theme_override_fonts/font = ExtResource("1_36fss")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_aip00")
theme_override_styles/hover = SubResource("StyleBoxFlat_aip00")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aip00")
text = "START GAME"

[node name="GameOver" type="Label" parent="."]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.823529, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_36fss")
theme_override_font_sizes/font_size = 8
text = "GAME OVER"

[node name="StageLabel" type="Label" parent="."]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.823529, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_36fss")
theme_override_font_sizes/font_size = 12
text = "Stage"

[node name="PauseButton" type="Button" parent="."]
process_mode = 2
layout_mode = 2
theme_override_colors/font_color = Color(0.505882, 0.341176, 0.854902, 1)
theme_override_colors/font_pressed_color = Color(0.503949, 0.342659, 0.855201, 1)
theme_override_colors/font_hover_color = Color(0.503949, 0.342659, 0.855201, 1)
theme_override_fonts/font = ExtResource("1_36fss")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_aip00")
theme_override_styles/hover = SubResource("StyleBoxFlat_aip00")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aip00")
text = "PAUSED"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
